--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5px;
+  padding: 0px;
 }
 
 .nav-left {
@@ -77,9 +77,10 @@ nav {
 
 h1 {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 1%;
 }
 
+/*Marquee Section from https://www.html.am/html-codes/marquees/html-scrolling-text.cfm*/
 .marquee-container {
   display: flex;
   flex-direction: column;
